# bool-memo

./: .gitignore  README.en.md  README.md  flet.pubspec_overrides.yaml  pyproject.toml
src/: login_view.py  main.py  main_view.py  memo_editor_view.py  search_memo_view.py  search_result_view.py  select_tag_view.py  tag_manage_view.py
src/components/: custom_text_field.py
utils/: bool-memo.desktop  build_deb.sh
