[project]
name = "bool-memo"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = "==3.13.*"
authors = [
    { name = "Hunter Zhang", email = "riverbird@aliyun.com" }
]
dependencies = [
    "flet==0.28.3",
    # "requests>=2.32.4",
    "certifi==2025.8.3",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.superiot"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "bool-memo"

# company name to display in about app dialogs
company = "Superiot"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Superiot"

[tool.flet.app]
path = "src"

[tool.flet.android]
split_per_abi = true
assets = ["assets"]
min_sdk_version = 24
target_sdk_version = 35

[tool.flet.splash]   # 原生层
image   = "assets/splash_android.png"
android = true

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}